--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="css/style.css" rel="stylesheet">
 
     <!-- Подложка для верстки и контуры блоков (временно!) -->
-
+    <!--
     <style>
       /*
       html {
@@ -16,7 +16,7 @@
       body {
         opacity: 0.5;
       }
-
+      */
       body > * {
         outline: 2px solid blue;
       }
@@ -38,8 +38,15 @@
       body > * > * > * > * > * > * > * {
         outline: 2px solid lightblue;
       }
-      */
+      body > * > * > * > * > * > * > * > *{
+        outline: 1px dotted red;
+      }
+      body > * > * > * > * > * > * > * > * > *{
+        outline: 1px dotted green;
+      }
+
     </style>
+    -->
   </head>
 
   <body>
