--- a/catalog.html
+++ b/catalog.html
@@ -62,7 +62,12 @@
         <div class="main-header__top-menu">
           <form class="main-header__search-form">
             <input class="main-header__search-input" type="text" placeholder="Поиск по сайту">
-            <button class="main-header__search-button" type="submit">найти</button>
+            <button class="main-header__search-button" type="submit">Найти</button>
+            <span class="main-header__search-line">
+              <svg width="441" height="2" viewbox="0 0 441 2" fill="#000000">
+                <rect width="441" height="2" x="0" y="0"/>
+              </svg>
+            </span>
           </form>
           <div class="main-header__top-navigation-wrapper">
             <ul class="main-header__user-navigation">
