--- a/index.html
+++ b/index.html
@@ -343,7 +343,9 @@
                 <p class="contacts__text">
                   Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.
                 </p>
-                <img class="contacts__map" src="img/main-page_map.jpg" width="560" height="222">
+                <a class="contact__map-link-wrapper" href="#">
+                  <img class="contacts__map" src="img/main-page_map.jpg" width="560" height="222">
+                </a>
               </div>
               </div>
             <a class="button-link contacts__btn-write-to-us" href="#">Напишите нам</a>
@@ -353,26 +355,37 @@
 
       <section class="feedback"> <!-- форма обратной связи  -->
         <form class="feedback-form">
-          <label class="feedback-form__label">
-            Ваше имя
-            <input class="feedback-form__input" type="text">
-          </label>
-          <label class="feedback-form__label">
-            Ваш e-mail
-            <input class="feedback-form__input" type="text">
-          </label>
-          <div class="feedback-form__label">
-            <p>Текст письма</p>
+          <div class="feedback-form__name-mail-wrapper">
+            <p>
+              <label class="feedback-form__label" for="feedback-form__input-name">Ваше имя</label>
+              <input class="feedback-form__input" id="feedback-form__input-name" type="text" name="feedback-form__input-name" placeholder="Имя Фамилия">
+            </p>
+            <p>
+              <label class="feedback-form__label" for="feedback-form__input-mail">Ваш e-mail</label>
+              <input class="feedback-form__input" id="feedback-form__input-mail" type="text" name="feedback-form__input-mail" placeholder="email@example.com">
+            </p>
           </div>
-          <textarea class="feedback-form__input" row="5"></textarea>
+          <div class="feedback-form__input-text-wrapper">
+            <p class="feedback-form__label">Текст письма</p>
+            <textarea class="feedback-form__input-text" rows="5">В свободной форме</textarea>
+          </div>
           <button class="feedback-form__submit" type="submit">Отправить</button>
+          <button class="feedback-form__close" type="button">
+            <svg xmlns="http://www.w3.org/2000/svg" width="55" height="55" viewBox="0 0 55 55">
+              <path fill="#F0C52E" d="M27.5 0C12.312 0 0 12.312 0 27.5S12.312 55 27.5 55 55 42.688 55 27.5 42.688 0 27.5 0zm11.476 37.072l-1.486 1.426-9.99-9.574-9.987 9.574-1.488-1.426 9.988-9.573-9.987-9.573 1.487-1.425 9.987 9.573 9.988-9.573 1.487 1.425-9.989 9.574 9.99 9.572z"/>
+            </svg>
+          </button>
         </form>
       </section>
 
       <section class="map">
         <form class="map-form">
-          <iframe class="map-form__google-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2249.1123749473704!2d37.5274293160995!3d55.68703400452975!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54cf65f5c8955%3A0x694710ccd55501e!2z0YPQuy4g0KHRgtGA0L7QuNGC0LXQu9C10LksIDE1LCDQnNC-0YHQutCy0LAsIDExOTMxMQ!5e0!3m2!1sru!2sru!4v1561579184111!5m2!1sru!2sru" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-          <button class="map-form__close" type="button">X</button>
+          <iframe class="map-form__google-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2249.1123749473704!2d37.5274293160995!3d55.68703400452975!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54cf65f5c8955%3A0x694710ccd55501e!2z0YPQuy4g0KHRgtGA0L7QuNGC0LXQu9C10LksIDE1LCDQnNC-0YHQutCy0LAsIDExOTMxMQ!5e0!3m2!1sru!2sru!4v1561579184111!5m2!1sru!2sru" width="960" height="560" frameborder="0" style="border:0" allowfullscreen></iframe>
+          <button class="map-form__close" type="button">
+            <svg xmlns="http://www.w3.org/2000/svg" width="55" height="55" viewBox="0 0 55 55">
+              <path fill="#F0C52E" d="M27.5 0C12.312 0 0 12.312 0 27.5S12.312 55 27.5 55 55 42.688 55 27.5 42.688 0 27.5 0zm11.476 37.072l-1.486 1.426-9.99-9.574-9.987 9.574-1.488-1.426 9.988-9.573-9.987-9.573 1.487-1.425 9.987 9.573 9.988-9.573 1.487 1.425-9.989 9.574 9.99 9.572z"/>
+            </svg>
+          </button>
         </form>
       </section>
     </main>
@@ -452,4 +465,7 @@
       </div>
     </footer>
   </body>
+
+  <script src="js/script.js"></script>
+
 </html>
