--- a/catalog.html
+++ b/catalog.html
@@ -4,48 +4,7 @@
     <meta charset="utf-8">
     <title>HTML Academy: Девайс</title>
     <link href="css/normalize.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
-
-    <!-- Подложка для верстки и контуры блоков (временно!) -->
-    <!--
-    <style>
-      /*
-      html {
-        background: url('img/device-index.jpg') 50% 0 no-repeat;
-      }
-      body {
-        opacity: 0.5;
-      }
-      */
-      body > * {
-        outline: 2px solid blue;
-      }
-      body > * > * {
-        outline: 2px solid green;
-      }
-      body > * > * > * {
-        outline: 2px solid red;
-      }
-      body > * > * > * > * {
-        outline: 2px solid purple;
-      }
-      body > * > * > * > * > * {
-        outline: 2px solid orangered;
-      }
-      body > * > * > * > * > * > * {
-        outline: 2px solid greenyellow;
-      }
-      body > * > * > * > * > * > * > * {
-        outline: 2px solid lightblue;
-      }
-      body > * > * > * > * > * > * > * > *{
-        outline: 1px dotted red;
-      }
-      body > * > * > * > * > * > * > * > * > *{
-        outline: 1px dotted green;
-      }
-    </style>
-    -->
+    <link href="css/style.min.css" rel="stylesheet">
   </head>
 
   <body>
@@ -60,8 +19,8 @@
         </a>
 
         <div class="main-header__top-menu">
-          <form class="main-header__search-form">
-            <input class="main-header__search-input" type="text" placeholder="Поиск по сайту">
+          <form class="main-header__search-form" action="https://echo.htmlacademy.ru" method="post">
+            <input class="main-header__search-input" type="text" value="" placeholder="Поиск по сайту">
             <button class="main-header__search-button" type="submit">Найти</button>
             <span class="main-header__search-line">
               <svg width="440" height="2" viewbox="0 0 440 2" fill="#000000">
@@ -71,7 +30,8 @@
           </form>
           <div class="main-header__top-navigation-wrapper">
             <ul class="main-header__user-navigation">
-              <li><a class="main-header__navigation-item main-header__navigation-item--user" href="#">Войти</a></li>
+              <li><a class="main-header__navigation-item main-header__navigation-item--user" href="#">Валентин Петухов</a></li>
+              <li><a class="main-header__navigation-item main-header__navigation-item--user-quit" href="#">Выйти</a></li>
             </ul>
             <ul class="main-header__goods-action">
               <li><a class="main-header__navigation-item main-header__navigation-item--compare" href="#">Сравнить</a></li>
@@ -83,8 +43,8 @@
         <nav class="main-header__site-navigation">
           <ul class="main-header__site-navigation-list">
             <li><a class="main-header__navigation-header-item main-header__navigation-header-item--catalog" href="#">Каталог товаров</a>
-              <!-- здесь будет выпадающее меню -->
-              <ul class="main-header__navigation-popup-list-wrapper">
+              <!-- выпадающее меню -->
+              <div class="main-header__navigation-popup-list-wrapper">
                 <ul class="main-header__navigation-popup-list">
                   <li><a class="main-header__navigation-popup-item" href="#">Виртуальная реальность</a></li>
                   <li><a class="main-header__navigation-popup-item" href="#">Фитнес-браслеты</a></li>
@@ -93,13 +53,15 @@
                   <li><a class="main-header__navigation-popup-item" href="#">Умные часы</a></li>
                   <li><a class="main-header__navigation-popup-item" href="#">Экшн-камеры</a></li>
                 </ul>
+              </div>
+            </li>
+            <li>
+              <ul class="main-header__navigation-services-wrapper">
+                <li><a class="main-header__navigation-header-item main-header__navigation-header-item--delivery" href="#">Доставка</a></li>
+                <li><a class="main-header__navigation-header-item main-header__navigation-header-item--warranty" href="#">Гарантия</a></li>
+                <li><a class="main-header__navigation-header-item main-header__navigation-header-item--contacts" href="#">Контакты</a></li>
               </ul>
             </li>
-            <ul class="main-header__navigation-services-wrapper">
-              <li><a class="main-header__navigation-header-item main-header__navigation-header-item--delivery" href="#">Доставка</a></li>
-              <li><a class="main-header__navigation-header-item main-header__navigation-header-item--warranty" href="#">Гарантия</a></li>
-              <li><a class="main-header__navigation-header-item main-header__navigation-header-item--contacts" href="#">Контакты</a></li>
-            </ul>
           </ul>
         </nav>
 
@@ -112,8 +74,8 @@
         <div class="inner-page-header__wrapper">
           <h1 class="inner-page-header__header">Моноподы для селфи</h1>
           <ul class="inner-page-header__breadcrumbs-list"><!-- хлебные крошки -->
-            <li class="inner-page-header__breadcrumbs-item"><a class="inner-page-header__breadcrumbs-link" href="index.html">Главная</a></li>
-            <li class="inner-page-header__breadcrumbs-item"><a class="inner-page-header__breadcrumbs-link" href="#">Каталог товаров</a></li>
+            <li class="inner-page-header__breadcrumbs-item inner-page-header__breadcrumbs-nav"><a class="inner-page-header__breadcrumbs-link" href="index.html">Главная</a></li>
+            <li class="inner-page-header__breadcrumbs-item inner-page-header__breadcrumbs-nav"><a class="inner-page-header__breadcrumbs-link" href="#">Каталог товаров</a></li>
             <li class="inner-page-header__breadcrumbs-item"><a class="inner-page-header__breadcrumbs-link">Моноподы для селфи</a></li>
           </ul>
         </div>
@@ -125,7 +87,7 @@
           <div class="search-filter__header-wrapper">
             <h2 class="search-filter__header">Фильтр:</h2>
           </div>
-          <form class="search-filter__form">
+          <form class="search-filter__form" action="https://echo.htmlacademy.ru" method="post">
             <span class="search-filter__head-line-price">
               <svg width="200" height="2" viewbox="0 0 200 2" fill="#000000">
                 <rect width="200" height="2" x="0" y="0"/>
@@ -207,15 +169,15 @@
               <ul class="search-result__up-down-list">
                 <li class="search-result__up-down-item">
                   <a class="search-result__up-link" href="#">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewbox="0 0 11 10">
-                      <path fill="#cacaca" d="M5.5 0L0 10h11z"/>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10">
+                      <path fill="#231F20" d="M5.5 0L0 10h11z"/>
                     </svg>
                   </a>
                 </li>
-                <li class="search-result__up-down-item">
-                  <a class="search-result__down-link search-result__up-down-link--current" href="#">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewbox="0 0 11 10">
-                      <path fill="#cacaca" d="M5.5 10L0 0h11"/>
+                <li class="search-result__up-down-item search-result__up-down-item--current">
+                  <a class="search-result__down-link" href="#">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10">
+                      <path fill="#231F20" d="M5.5 10L0 0h11"/>
                     </svg>
                   </a>
                 </li>
@@ -291,13 +253,15 @@
 
           <h3 class="visually-hidden">Навигация по страницам</h3>
           <ul class="search-result__page-navigation">
-            <li class="search-result__page-navigation-item-back"><a class="search-result__page-navigation-link" href="#">Назад</a></li>
-            <div class="search-result__page-navigation-number-wrapper">
-              <li class="search-result__page-navigation-item"><a class="search-result__page-navigation-link" href="#">1</a></li>
-              <li class="search-result__page-navigation-item"><a class="search-result__page-navigation-link" href="#">2</a></li>
-              <li class="search-result__page-navigation-item"><a class="search-result__page-navigation-link" href="#">3</a></li>
-            </div>
-            <li class="search-result__page-navigation-item-forward"><a class="search-result__page-navigation-link" href="#">Вперед</a></li>
+            <li class="search-result__page-navigation-item-back"><a class="search-result__page-navigation-link-back" href="#">Назад</a></li>
+            <li>
+              <ul class="search-result__page-navigation-number-wrapper">
+                <li class="search-result__page-navigation-item"><a class="search-result__page-navigation-link search-result__page-navigation-link-current" href="#">1</a></li>
+                <li class="search-result__page-navigation-item"><a class="search-result__page-navigation-link" href="#">2</a></li>
+                <li class="search-result__page-navigation-item"><a class="search-result__page-navigation-link" href="#">3</a></li>
+              </ul>
+            </li>
+            <li class="search-result__page-navigation-item-forward"><a class="search-result__page-navigation-link-forward" href="#">Вперед</a></li>
           </ul>
         </section>
 
@@ -313,13 +277,14 @@
               <path d="M-.151.702v33.6h13.532a15.72 15.72 0 0 0 11.72-4.824 16.458 16.458 0 0 0 4.712-11.976 16.458 16.458 0 0 0-4.712-11.976A15.723 15.723 0 0 0 13.381.702H-.151zM7.582 26.91V8.091h5.8a8.646 8.646 0 0 1 6.5 2.568 9.407 9.407 0 0 1 2.489 6.84 9.406 9.406 0 0 1-2.489 6.84 8.642 8.642 0 0 1-6.5 2.568h-5.8zm34.8-5.952h12.082v-7.3H42.378V8.091h13.291V.702H34.645v33.6H55.91V26.91H42.378v-5.952zm36.343 13.344L89.744.702h-8.458l-7.491 24.72L66.304.702h-8.457l11.019 33.6h9.859zm14.4 0h7.733V.702h-7.733v33.6zm38.615-1.416a15.506 15.506 0 0 0 6.041-5.688l-6.67-3.84a7.482 7.482 0 0 1-3.165 3.024 9.87 9.87 0 0 1-4.664 1.1 9.595 9.595 0 0 1-7.177-2.736 9.909 9.909 0 0 1-2.682-7.248 9.909 9.909 0 0 1 2.682-7.248 9.595 9.595 0 0 1 7.177-2.736 9.897 9.897 0 0 1 4.639 1.08 7.592 7.592 0 0 1 3.19 3.048l6.67-3.84a15.873 15.873 0 0 0-6.09-5.688 17.42 17.42 0 0 0-8.409-2.088c-9.779-.272-17.797 7.691-17.591 17.472-.208 9.781 7.809 17.747 17.588 17.476a17.52 17.52 0 0 0 8.458-2.088zm17.881-11.928h12.082v-7.3h-12.085V8.091h13.29V.702h-21.023v33.6h21.265V26.91h-13.532v-5.952z" class="cls-1" data-name="-e-logo"/>
             </svg>
           </a>
-          <div class="main-footer__navigation-link-wrapper">
-            <ul class="main-footer__user-links">
-              <li><a class="main-footer__navigation-item main-footer-navigation-item__user" href="#">Войти</a></li>
+          <div class="main-footer__navigation-link-wrapper main-footer__navigation-link-wrapper-inner-page">
+            <ul class="main-footer__user-links main-footer__user-links-inner-page">
+              <li><a class="main-footer__navigation-item main-footer__navigation-item--user" href="#">Валентин Петухов</a></li>
+              <li><a class="main-footer__navigation-item main-footer__navigation-item--user-quit" href="#">Выйти</a></li>
             </ul>
             <ul class="main-footer__goods-action">
-              <li><a class="main-footer__navigation-item main-footer-navigation-item__compare" href="#">Сравнить</a></li>
-              <li><a class="main-footer__navigation-item main-footer-navigation-item__cart" href="#">Корзина</a></li>
+              <li><a class="main-footer__navigation-item main-footer__navigation-item--compare" href="#">Сравнить</a></li>
+              <li><a class="main-footer__navigation-item main-footer__navigation-item--cart" href="#">Корзина</a></li>
             </ul>
           </div>
         </div>
