--- a/catalog.html
+++ b/catalog.html
@@ -85,106 +85,108 @@
 
         <aside class="search-filter"> <!-- панель фильтров -->
           <div class="search-filter__header-wrapper">
-            <h2 class="search-filter__header">Фильтр:</h2>
+            <div class="search-filter__header-inner-wrapper">
+              <h2 class="search-filter__header">Фильтр:</h2>
+            </div>
           </div>
           <form class="search-filter__form" action="https://echo.htmlacademy.ru" method="post">
-            <span class="search-filter__head-line-price">
-              <svg width="200" height="2" viewbox="0 0 200 2" fill="#000000">
-                <rect width="200" height="2" x="0" y="0"/>
-              </svg>
-            </span>
-            <h3 class="search-filter__form-header-price">Стоимость</h3>
-            <div class="search-filter__form-price-slider">
-              <div class="search-filter__form-price-slider-controls">
-                <div class="search-filter__form-price-slider-controls-scale">
-                  <div class="search-filter__form-price-slider-controls-range-bar"></div>
+              <span class="search-filter__head-line-price">
+                <svg width="200" height="2" viewbox="0 0 200 2" fill="#000000">
+                  <rect width="200" height="2" x="0" y="0"/>
+                </svg>
+              </span>
+              <h3 class="search-filter__form-header-price">Стоимость</h3>
+              <div class="search-filter__form-price-slider">
+                <div class="search-filter__form-price-slider-controls">
+                  <div class="search-filter__form-price-slider-controls-scale">
+                    <div class="search-filter__form-price-slider-controls-range-bar"></div>
+                  </div>
+                  <div class="search-filter__form-price-slider-controls-toggle search-filter__form-price-slider-controls-toggle--min" title="Минимальная цена"></div>
+                  <div class="search-filter__form-price-slider-controls-toggle search-filter__form-price-slider-controls-toggle--max" title="Максимальная цена"></div>
                 </div>
-                <div class="search-filter__form-price-slider-controls-toggle search-filter__form-price-slider-controls-toggle--min"></div>
-                <div class="search-filter__form-price-slider-controls-toggle search-filter__form-price-slider-controls-toggle--max"></div>
+                <div class="search-filter__form-price-slider-price-label">
+                  <span class="search-filter__form-price-slider-price-label--min">от 0</span>
+                  <span class="search-filter__form-price-slider-price-label--max">до 5000</span>
+                </div>
               </div>
-              <div class="search-filter__form-price-slider-price-label">
-                <span class="search-filter__form-price-slider-price-label--min">от 0</span>
-                <span class="search-filter__form-price-slider-price-label--max">до 5000</span>
-              </div>
-            </div>
-            <span class="search-filter__head-line-color">
-              <svg width="200" height="2" viewbox="0 0 200 2" fill="#000000">
-                <rect width="200" height="2" x="0" y="0"/>
-              </svg>
-            </span>
-            <h3 class="search-filter__form-header-color">Цвет</h3>
-            <label class="search-filter__color-item">
-              <input class="search-filter__color-item-input" type="checkbox" value="color-black" name="color-black" checked>
-              <span class="search-filter__color-item-box"></span>
-              Черный
-            </label>
-            <label class="search-filter__color-item">
-              <input class="search-filter__color-item-input" type="checkbox" value="color-white" name="color-white">
-              <span class="search-filter__color-item-box"></span>
-              Белый
-            </label>
-            <label class="search-filter__color-item">
-              <input class="search-filter__color-item-input" type="checkbox" value="color-blue" name="color-blue" checked>
-              <span class="search-filter__color-item-box"></span>
-              Синий
-            </label>
-            <label class="search-filter__color-item">
-              <input class="search-filter__color-item-input" type="checkbox" value="color-red" name="color-red" checked>
-              <span class="search-filter__color-item-box"></span>
-              Красный
-            </label>
-            <label class="search-filter__color-item search-filter__color-item-last">
-              <input class="search-filter__color-item-input" type="checkbox" value="color-pink" name="color-pink">
-              <span class="search-filter__color-item-box"></span>
-              Розовый
-            </label>
-            <span class="search-filter__head-line-bluetooth">
-              <svg width="200" height="2" viewbox="0 0 200 2" fill="#000000">
-                <rect width="200" height="2" x="0" y="0"/>
-              </svg>
-            </span>
-            <h3 class="search-filter__form-header-bluetooth">Bluetooth</h3>
-            <label class="search-filter__bt-radio">
-              <input class="search-filter__bt-radio-input" type="radio" name="search-filter-form__bluetooth" value="bluetooth-yes" checked>Есть
-              <span class="search-filter__bt-radio-box"></span>
-            </label>
-            <label class="search-filter__bt-radio search-filter__bt-radio-last">
-              <input class="search-filter__bt-radio-input" type="radio" name="search-filter-form__bluetooth" value="bluetooth-no">Нет
-              <span class="search-filter__bt-radio-box"></span>
-            </label>
-            <button class="search-filter__submit-btn" type="submit">Показать</button>
+              <span class="search-filter__head-line-color">
+                <svg width="200" height="2" viewbox="0 0 200 2" fill="#000000">
+                  <rect width="200" height="2" x="0" y="0"/>
+                </svg>
+              </span>
+              <h3 class="search-filter__form-header-color">Цвет</h3>
+              <label class="search-filter__color-item">
+                <input class="search-filter__color-item-input" type="checkbox" value="color-black" name="color-black" checked>
+                <span class="search-filter__color-item-box"></span>
+                Черный
+              </label>
+              <label class="search-filter__color-item">
+                <input class="search-filter__color-item-input" type="checkbox" value="color-white" name="color-white">
+                <span class="search-filter__color-item-box"></span>
+                Белый
+              </label>
+              <label class="search-filter__color-item">
+                <input class="search-filter__color-item-input" type="checkbox" value="color-blue" name="color-blue" checked>
+                <span class="search-filter__color-item-box"></span>
+                Синий
+              </label>
+              <label class="search-filter__color-item">
+                <input class="search-filter__color-item-input" type="checkbox" value="color-red" name="color-red" checked>
+                <span class="search-filter__color-item-box"></span>
+                Красный
+              </label>
+              <label class="search-filter__color-item search-filter__color-item-last">
+                <input class="search-filter__color-item-input" type="checkbox" value="color-pink" name="color-pink">
+                <span class="search-filter__color-item-box"></span>
+                Розовый
+              </label>
+              <span class="search-filter__head-line-bluetooth">
+                <svg width="200" height="2" viewbox="0 0 200 2" fill="#000000">
+                  <rect width="200" height="2" x="0" y="0"/>
+                </svg>
+              </span>
+              <h3 class="search-filter__form-header-bluetooth">Bluetooth</h3>
+              <label class="search-filter__bt-radio">
+                <input class="search-filter__bt-radio-input" type="radio" name="search-filter-form__bluetooth" value="bluetooth-yes" checked>Есть
+                <span class="search-filter__bt-radio-box"></span>
+              </label>
+              <label class="search-filter__bt-radio search-filter__bt-radio-last">
+                <input class="search-filter__bt-radio-input" type="radio" name="search-filter-form__bluetooth" value="bluetooth-no">Нет
+                <span class="search-filter__bt-radio-box"></span>
+              </label>
+              <button class="search-filter__submit-btn" type="submit">Показать</button>
           </form>
         </aside>
-
         <section class="search-result"> <!-- список найденных товаров -->
           <h2 class="visually-hidden">Результаты поиска</h2>
           <div class="search-result__header-wrapper">
-            <h3 class="search-result__header">Сортировка:</h3>
-            <div class="search-result__sort-wrapper">
-              <ul class="search-result__sort-type-list">
-                <li class="search-result__sort-type-item"><a class="search-result__sort-type-link search-result__sort-type-link--current" href="#">По цене</a></li>
-                <li class="search-result__sort-type-item"><a class="search-result__sort-type-link" href="#">По типу</a></li>
-                <li class="search-result__sort-type-item"><a class="search-result__sort-type-link" href="#">По популярности</a></li>
-              </ul>
-              <ul class="search-result__up-down-list">
-                <li class="search-result__up-down-item">
-                  <a class="search-result__up-link" href="#">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10">
-                      <path fill="#231F20" d="M5.5 0L0 10h11z"/>
-                    </svg>
-                  </a>
-                </li>
-                <li class="search-result__up-down-item search-result__up-down-item--current">
-                  <a class="search-result__down-link" href="#">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10">
-                      <path fill="#231F20" d="M5.5 10L0 0h11"/>
-                    </svg>
-                  </a>
-                </li>
-              </ul>
+            <div class="search-result__header-inner-wrapper">
+              <h3 class="search-result__header">Сортировка:</h3>
+              <div class="search-result__sort-wrapper">
+                <ul class="search-result__sort-type-list">
+                  <li class="search-result__sort-type-item"><a class="search-result__sort-type-link search-result__sort-type-link--current" href="#">По цене</a></li>
+                  <li class="search-result__sort-type-item"><a class="search-result__sort-type-link" href="#">По типу</a></li>
+                  <li class="search-result__sort-type-item"><a class="search-result__sort-type-link" href="#">По популярности</a></li>
+                </ul>
+                <ul class="search-result__up-down-list">
+                  <li class="search-result__up-down-item">
+                    <a class="search-result__up-link" href="#">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10">
+                        <path fill="#231F20" d="M5.5 0L0 10h11z"/>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="search-result__up-down-item search-result__up-down-item--current">
+                    <a class="search-result__down-link" href="#">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10">
+                        <path fill="#231F20" d="M5.5 10L0 0h11"/>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </div>
           </div>
-
           <h3 class="visually-hidden">Список найденных товаров</h3>
           <div class="search-result__goods-list-wrapper">
             <ul class="search-result__goods-list">
@@ -213,8 +215,8 @@
                     </div>
                   </div>
                   <div class="search-result__goos-cart-text-wrapper">
-                    <h4 class="search-result__googs-card-header"><a class="search-result__googs-card-header-link" href="#">Профессиональная селфи-палка</a></h4>
-                    <p class="search-result__googs-card-price">1 500р.</p>
+                    <h4 class="search-result__googs-card-header search-result__googs-card-header-min"><a class="search-result__googs-card-header-link" href="#">Профессиональная селфи-палка</a></h4>
+                    <p class="search-result__googs-card-price">1 500 руб.</p>
                   </div>
                 </article>
               </li>
@@ -229,14 +231,14 @@
                   </div>
                   <div class="search-result__goos-cart-text-wrapper">
                     <h4 class="search-result__googs-card-header"><a class="search-result__googs-card-header-link" href="#">Непотопляемая селфи-палка</a></h4>
-                    <p class="search-result__googs-card-price">2 500р.</p>
+                    <p class="search-result__googs-card-price">2 500 руб.</p>
                   </div>
                 </article>
               </li>
               <li class="search-result__goods-item">
                 <article class="search-result__goods-card">
                   <div class="search-result__goods-card-img-wrapper">
-                    <img src="img/item-4-img.jpg" width="360" height="380" alt="Селфи-палка &quot;Следуй за мной&quot;">
+                    <img src="img/item-4-img.jpg" width="360" height="380" alt="Селфи-палка &laquo;Следуй за мной&raquo;">
                     <div class="search-result__goods-card-hover">
                       <a class="search-result__googs-card-button-cart" href="#">В корзину</a>
                       <a class="search-result__googs-card-button-compare" href="#">Добавить к сравнению</a>
@@ -244,13 +246,12 @@
                   </div>
                   <div class="search-result__goos-cart-text-wrapper">
                     <h4 class="search-result__googs-card-header"><a class="search-result__googs-card-header-link" href="#">Селфи-палка "Следуй за мной"</a></h4>
-                    <p class="search-result__googs-card-price">4 900р.</p>
+                    <p class="search-result__googs-card-price">4 900 руб.</p>
                   </div>
                 </article>
               </li>
             </ul>
           </div>
-
           <h3 class="visually-hidden">Навигация по страницам</h3>
           <ul class="search-result__page-navigation">
             <li class="search-result__page-navigation-item-back"><a class="search-result__page-navigation-link-back" href="#">Назад</a></li>
@@ -264,7 +265,6 @@
             <li class="search-result__page-navigation-item-forward"><a class="search-result__page-navigation-link-forward" href="#">Вперед</a></li>
           </ul>
         </section>
-
       </div>
 
     </main>
@@ -279,7 +279,7 @@
           </a>
           <div class="main-footer__navigation-link-wrapper main-footer__navigation-link-wrapper-inner-page">
             <ul class="main-footer__user-links main-footer__user-links-inner-page">
-              <li><a class="main-footer__navigation-item main-footer__navigation-item--user" href="#">Валентин Петухов</a></li>
+              <li><a class="main-footer__navigation-item main-footer__navigation-item--user main-footer__navigation-item--user-inner-page" href="#">Валентин Петухов</a></li>
               <li><a class="main-footer__navigation-item main-footer__navigation-item--user-quit" href="#">Выйти</a></li>
             </ul>
             <ul class="main-footer__goods-action">
@@ -308,23 +308,26 @@
                 <rect width="80" height="7" x="0" y="0"/>
               </svg>
             </span>
-            <a class="main-footer__logo-htmlacademy" href="https://htmlacademy.ru/intensive/htmlcss">
+            <a class="main-footer__logo-htmlacademy" href="https://htmlacademy.ru/intensive/htmlcss" aria-label="Перейти на сайт разработчика - htmlacademy">
               <svg xmlns="http://www.w3.org/2000/svg" width="26.943" height="34.09" viewBox="0 0 26.943 34.09">
+                <title>Перейти на сайт разработчика - htmlacademy</title>
                 <path d="M13.62.017L13.472 0 0 1.412v24.661l13.473 8.017 13.43-7.99.042-.025V1.412L13.62.017zm11.399 12.11L13.495 5.334l-.001-.104-.087.05-.088-.056v.109L1.925 12.118V3.147l11.548-1.212L25.02 3.147v8.98zm-11.614-5.34L24.923 13.5l-4.479 2.64-7.093-4.221-.014 1.415 5.904 3.513-.86.507-5.03-2.992-.014 1.415 3.827 2.275-.782.523-3.031-1.787-.014 1.413 1.853 1.091-1.8 1.081-11.356-6.751 11.371-6.835zm-11.48 8.34l11.411 6.791.016 1.044-7.942-4.728-.015 1.416 7.979 4.795.018 1.076-7.973-4.74-.013 1.414 8.021 4.822.046.025 8.143-4.872-.011-5.177 3.415-2.036v10.021L13.472 31.85 1.925 24.979v-9.852z"/>
               </svg>
             </a>
           </div>
           <ul class="main-footer__social-buttons-list">
             <li>
-              <a class="main-footer__social-button" href="#">
+              <a class="main-footer__social-button" href="#" aria-label="Девайс на Фейсбуке">
                 <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
+                  <title>Девайс на fb</title>
                   <path fill="#FFF" d="M16 0C7.164 0 0 7.163 0 16s7.164 16 16 16c8.837 0 16-7.164 16-16S24.837 0 16 0zm4.062 9.455h-3.021v3.444h3.021v3.445h-3.021v8.61H14.02v-8.61H11v-3.445h3.021V9.455c0-1.902 1.353-3.445 3.021-3.445h3.021v3.445z"/>
                 </svg>
               </a>
             </li>
             <li>
-              <a class="main-footer__social-button" href="#">
+              <a class="main-footer__social-button" href="#" aria-label="Девайс в Инстаграме">
                 <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
+                  <title>Девайс в Instagam</title>
                   <g fill="#FFF">
                     <path d="M20.916 16a4.938 4.938 0 1 1-9.877 0c0-.394.051-.773.138-1.14h-.897v6.838h11.396V14.86h-.897c.086.367.137.746.137 1.14z"/>
                     <path d="M15.978 18.659c1.466 0 2.659-1.193 2.659-2.659s-1.193-2.659-2.659-2.659c-1.466 0-2.659 1.193-2.659 2.659s1.192 2.659 2.659 2.659zM18.637 10.302h3.039v3.039h-3.039z"/>
@@ -334,8 +337,9 @@
               </a>
             </li>
             <li>
-              <a class="main-footer__social-button" href="#">
+              <a class="main-footer__social-button" href="#" aria-label="Девайс в Твитере">
                 <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
+                  <title>Девайс в Twetter</title>
                   <path fill="#FFF" d="M16 0C7.164 0 0 7.164 0 16c0 8.837 7.164 16 16 16 8.837 0 16-7.163 16-16 0-8.836-7.163-16-16-16zm7.944 12.809c-.251 6.516-3.463 10.832-10.992 10.702h-.486c-.447 0-4.543-.443-5.344-1.823 2.479.19 4.247-.406 5.12-1.136-1.048-.289-2.923-.461-3.251-2.848.384.104.618.221 1.299.113-1.307-.824-2.758-1.519-2.679-3.643.311.317 1.164.518 1.46.457-.768-.233-2.149-3.244-.974-4.781 1.984 1.79 4.075 3.482 7.804 3.643.227-2.214 1.24-3.699 3.168-4.325 1.84-.479 3.255.26 3.901 1.138.737-.224 1.453-.466 2.193-.685-.004.833-.569 1.463-.935 1.709.747.165 1.423-.475 1.423-.475-.184.963-1.094 1.725-1.707 1.954z"/>
                 </svg>
               </a>
