--- a/catalog.html
+++ b/catalog.html
@@ -101,8 +101,8 @@
                   <div class="search-filter__form-price-slider-controls-scale">
                     <div class="search-filter__form-price-slider-controls-range-bar"></div>
                   </div>
-                  <div class="search-filter__form-price-slider-controls-toggle search-filter__form-price-slider-controls-toggle--min" title="Минимальная цена"></div>
-                  <div class="search-filter__form-price-slider-controls-toggle search-filter__form-price-slider-controls-toggle--max" title="Максимальная цена"></div>
+                  <div class="search-filter__form-price-slider-controls-toggle search-filter__form-price-slider-controls-toggle--min" title="Минимальная цена" aria-label="Минимальная цена"></div>
+                  <div class="search-filter__form-price-slider-controls-toggle search-filter__form-price-slider-controls-toggle--max" title="Максимальная цена" aria-label="Максимальная цена"></div>
                 </div>
                 <div class="search-filter__form-price-slider-price-label">
                   <span class="search-filter__form-price-slider-price-label--min">от 0</span>
@@ -245,7 +245,7 @@
                     </div>
                   </div>
                   <div class="search-result__goos-cart-text-wrapper">
-                    <h4 class="search-result__googs-card-header"><a class="search-result__googs-card-header-link" href="#">Селфи-палка "Следуй за мной"</a></h4>
+                    <h4 class="search-result__googs-card-header"><a class="search-result__googs-card-header-link" href="#">Селфи-палка &laquo;Следуй за мной&raquo;</a></h4>
                     <p class="search-result__googs-card-price">4 900 руб.</p>
                   </div>
                 </article>
